--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -3,8 +3,23 @@
 {% load i18n %}
 
 {% block head %}
-    <link rel="stylesheet" href="{% static 'css/profile.css' %}">
+<link rel="stylesheet" href="{% static 'css/profile.css' %}">
+<title>{% block title %}My Profile - Basroba{% endblock %}</title>
+<meta name="description" content="{% block meta_description %}Manage your Basroba account, update profile information, addresses, and view your orders easily.{% endblock %}">
+<meta name="keywords" content="Basroba, user profile, account management, orders, address book, online shopping">
+<meta name="author" content="Basroba">
+<link rel="canonical" href="{{ request.build_absolute_uri }}">
+<meta property="og:title" content="My Profile - Basroba">
+<meta property="og:description" content="Access your Basroba account to manage profile information, addresses, and view orders.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="{{ request.build_absolute_uri }}">
+<meta property="og:image" content="{% static 'pics/MainLogo.png' %}">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="My Profile - Basroba">
+<meta name="twitter:description" content="Manage your account information, addresses, and orders at Basroba online store.">
+<meta name="twitter:image" content="{% static 'pics/MainLogo.png' %}">
 {% endblock %}
+
 
 {% block title %}
     My Profile
