--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -4,7 +4,6 @@
 
 {% block head %}
 <link rel="stylesheet" href="{% static 'css/profile.css' %}">
-<title>{% block title %}My Profile - Basroba{% endblock %}</title>
 <meta name="description" content="{% block meta_description %}Manage your Basroba account, update profile information, addresses, and view your orders easily.{% endblock %}">
 <meta name="keywords" content="Basroba, user profile, account management, orders, address book, online shopping">
 <meta name="author" content="Basroba">
@@ -22,7 +21,7 @@
 
 
 {% block title %}
-    My Profile
+    My Profile - Basroba
 {% endblock %}
 
 {% block body %}
